--- a/Curso/appsettings.json
+++ b/Curso/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Curso-923B64D2-02D0-4A4F-A1AD-4F3FFAD6149C;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Curso-923B64D2-02D0-4A4F-A1AD-4F3FFAD6149C;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "TiendaDbContext": "Data Source=.;Initial Catalog=AdventureWorksLT2017;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
